--- a/bower.json
+++ b/bower.json
@@ -13,5 +13,9 @@
     "bower_components",
     "test",
     "tests"
-  ]
+  ],
+  "dependencies": {
+    "sweetalert": "^1.1.3",
+    "jquery": "^3.1.0"
+  }
 }
