--- a/package.json
+++ b/package.json
@@ -15,5 +15,13 @@
   "bugs": {
     "url": "https://github.com/LACB93/Fortune_Cookie/issues"
   },
-  "homepage": "https://github.com/LACB93/Fortune_Cookie#readme"
+  "homepage": "https://github.com/LACB93/Fortune_Cookie#readme",
+ "dependencies": {
+    "colors": "^1.1.2",
+    "mime": "^1.3.4",
+    "mongodb": "^2.2.4"
+  },
+  "devDependencies": {
+    "nodemon": "^1.9.2"
+  }
 }
